# spark-zsjni

./: .gitignore  pom.xml  readme.md
zsjni/: pom.xml
zsjni/src/main/java/com/windjammer/zetascale/: ZSContainer.java  ZSContainerManager.java  ZSManager.java  ZSNative.java  ZSNativeContainer.java  ZSNativeObejct.java  ZSNativeThread.java  ZSNativeUtils.java  ZSState.java  ZSThreadState.java
zsjni/src/main/java/com/windjammer/zetascale/exception/: ZSContainerException.java  ZSException.java  ZSExceptionHandler.java  ZSThreadException.java
zsjni/src/main/java/com/windjammer/zetascale/type/: ContainerProperty.java
zsjni/src/test/java/com/windjammer/zetascale/: ZSBenchmark.java  ZSManagerTest.java
zsjni/src/test/resources/: zs.prop
zsnative/: pom.xml
zsnative/src/main/c/: CMakeLists.txt  ZSNative.c  ZSNativeContainer.c  ZSNativeThread.c  ZSNativeUtils.c  main_test.c
zsnative/src/main/c/include/: com_windjammer_zetascale_ZSNative.h  com_windjammer_zetascale_ZSNativeContainer.h  com_windjammer_zetascale_ZSNativeThread.h  com_windjammer_zetascale_ZSNativeUtils.h
zsnative/src/main/c/zs_sdk-2.0/utils/: zsck  zsformat  zsmetafault
